<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/create_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/create_editlayout_act_name"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_toolbar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_edit_act_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/create_edit_act_name"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/create_editlayout_act_location"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_toolbar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_edit_act_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/create_edit_act_location"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/create_editlayout_act_volunteer_name"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_toolbar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_edit_act_volunteer_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/create_edit_act_volunteer_name"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/create_button_date"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="220dp"
        android:text="@string/create_button_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_toolbar" />

    <TextView
        android:id="@+id/create_text_date"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="220dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/create_button_date"
        app:layout_constraintTop_toBottomOf="@id/create_toolbar" />

    <Button
        android:id="@+id/create_button_time"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="270dp"
        android:text="@string/create_button_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_toolbar" />

    <TextView
        android:id="@+id/create_text_time"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="270dp"
        android:textSize="16sp"
        android:gravity="center"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@id/create_button_time"
        app:layout_constraintTop_toBottomOf="@id/create_toolbar"/>

    <TextView
        android:id="@+id/create_text_inform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="350dp"
        android:text="TextView"
        android:textColor="@android:color/holo_red_light"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_toolbar" />

    <Button
        android:id="@+id/create_button_confirm"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="400dp"
        android:background="@color/colorAccent"
        android:text="@string/create_button_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_toolbar" />

</android.support.constraint.ConstraintLayout>